# chaos

./: .clang-format  .clang-tidy  .codecov.yml  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: clang-format-check.yml  codecov.yml  ubuntu20.04.clang.yml  ubuntu20.04.gcc.yml  ubuntu22.04.clang.yml  ubuntu22.04.gcc.yml
apps/: CMakeLists.txt
docs/: CMakeLists.txt
docs/design/: config.tex
docs/design/mapping/: main.tex  requirements.tex
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt  cache.h  macro.h  numerical.h  pattern.h  random.h  range_helper.h  type.h  type_helper.h  type_traits.h  version.h
modules/core/: CMakeLists.txt  utils.cc  utils.h
modules/core/evd/: CMakeLists.txt  evd.cc  evd.h
modules/core/linearsolver/: CMakeLists.txt  linearsolver.cc  linearsolver.h  pardiso_solver.cc  pardiso_solver.h
modules/core/quadrature/: CMakeLists.txt  quadrature.cc  quadrature.h
modules/core/quadrature/details/: gauss_legendre.cc  tet.cc  tri.cc
modules/core/svd/: CMakeLists.txt  closedFormSVD.h  signedSVD.h
modules/core/tridiag/: CMakeLists.txt  tridiagonal.cc  tridiagonal_matrix.h  tridiagonal_matrix.imp  tridiagonal_solver.h
modules/crtp-mapping/: CMakeLists.txt  data_filler.h  function.h  function_concepts.h  function_with_context.h  patt_helper.cc  patt_helper.h  variable.h
modules/crtp-mapping/deprecated/: function2.h
modules/crtp-mapping/filler/: offset_filler.h  one_dim_filler.h  two_dim_filler.h  weight_filler.h
modules/geometry/: CMakeLists.txt  line.cc  line.h
modules/gui/: CMakeLists.txt  appBase.h  menuBase.h
modules/io/: CMakeLists.txt  data_report.cc  data_report.h  dump.h  io_basic.h  load_nods_from_csv.h  obj.h  off.h  polyFormat.h  vtk.h
modules/io/line/: CMakeLists.txt  line.cc  line.h
modules/mapping/: CMakeLists.txt  autodiff.h  autodiff.imp  basic_data_filler.h  data_filler.h  data_filler.imp  data_filler_concepts.h  data_filler_traits.h  filler.hh  filler_concept.hh  filler_concepts.hh  filler_wrapper.hh  function.h  function.imp  function_concepts.h  function_traits.h  function_with_context.h  maxima.h  maxima.imp  patt_helper.cc  patt_helper.h
modules/mapping/deprecated/: autodiff.h  bkp.h  data_filler_traits.h
modules/mapping/filler/: basic.hh  idmap_filler.h  offset.hh  offset_filler.h  one_dim_filler.h  two_dim_filler.h  weight.hh  weight_filler.h  wrapper.hh
modules/maxima/: CMakeLists.txt  hyperelastic_strain_energy.f90  hyperelastic_strain_energy.h  spring_energy.f90  spring_energy.h
modules/misc/: CMakeLists.txt
modules/mixin-mapping/: basic_data_filler.h  function_concepts.h
modules/model/: CMakeLists.txt
modules/optimizer/: CMakeLists.txt  newton.h
modules/problem/: CMakeLists.txt
modules/simulator/: CMakeLists.txt
modules/utils/: CMakeLists.txt
modules/utils/fs/: CMakeLists.txt  fshelper.cc  fshelper.h
modules/utils/logger/: CMakeLists.txt  logger.h
modules/utils/params/: CMakeLists.txt  configjson.h  params.h  valid.h
modules/utils/stopwatch/: CMakeLists.txt  clock_type.cc  clock_type.h  stopwatch.cc  stopwatch.h  stw_metric.cc  stw_metric.h  type.h
tests/: CMakeLists.txt  bench_eigen_storage_align.cc  functor_evaluation_cost.cc  functor_evaluation_cost_with_data_filler.cc  spring_chain.h  test_autodiff.cc  test_concepts.cc  test_filler.cc  test_forward.cc  test_function.cc  test_mixin.cc  test_myorder.cc  test_traits.cc  test_tuple.cc  test_variable.cc
tests/unit_test/common/: cache.cc  common.cc  helper.cc
tests/unit_test/core/: core.cc  evd.cc  linearsolver.cc  quadrature.cc  svd.cc
tests/unit_test/io/: io.cc
tests/unit_test/mapping/: autodiff.cc  data_filler.cc  filler.cc  filler_wrapper.cc  patt.cc
tests/unit_test/utils/: fs.cc  logger.cc  params.cc  stw.cc
